<?xml version="1.0"?>
<package>
  <name>spin_turtle</name>
  <version>0.0.0</version>
  <description>The spin_turtle package</description>

  <maintainer email="ray@todo.todo">ray</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
